--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -10,6 +10,7 @@
 <div class="card">
 	<div class="row no-gutters">
 		<aside class="col-md-6">
+
 <article class="gallery-wrap">
 	<div class="img-big-wrap">
 	   <a href="#"><img src="{{ single_product.images.url }}"></a>
@@ -18,63 +19,85 @@
 </article> <!-- gallery-wrap .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
-<article class="content-body">
+<form class="" action="{% url 'add_cart' single_product.id %}" method="POST">
+{% csrf_token %}
+	<article class="content-body">
 
-<h2 class="title">{{ single_product.product_name }}</h2>
+	<h2 class="title">{{ single_product.product_name }}</h2>
 
-<div class="mb-3">
-	<var class="price h4">${{ single_product.price }}</var>
-</div>
+	<div class="mb-3">
+		<var class="price h4">${{ single_product.price }}</var>
+	</div>
 
-<p>{{ single_product.description }}</p>
+	<p>{{ single_product.description }}</p>
 
 
-<hr>
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Choose Color</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Silver
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color" > Gray
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color checked"> Gold
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Black
-			  </label>
-			</div>
-		</div>
-	</div> <!-- row.// -->
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Select Size</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> S
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color" checked> M
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> L
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> XL
-			  </label>
-			</div>
-		</div>
-	</div> <!-- row.// -->
 	<hr>
-	{% if single_product.stock <= 0 %}
-		<h5 class='text-danger'>Out of Stock</h5>
-	{% else %}
-		<a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-	{% endif %}
-</article> <!-- product-info-aside .// -->
+		<div class="row">
+			<div class="item-option-select">
+				<h6>Choose Color</h6>
+				<select class="form-control" name="color" required>
+					<option value="" disabled selected>Select Color</option>
+					{% for color in single_product.variation_set.colors %}
+					<option value="{{ color.variation_value }}">{{ color.variation_value }}</option>
+					{% endfor %}
+
+				</select>
+				<!-- <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
+				  <label class="btn btn-light">
+				    <input type="radio" name="radio_color"> Silver
+				  </label>
+				  <label class="btn btn-light">
+				    <input type="radio" name="radio_color" > Gray
+				  </label>
+				  <label class="btn btn-light active">
+				    <input type="radio" name="radio_color checked"> Gold
+				  </label>
+				  <label class="btn btn-light">
+				    <input type="radio" name="radio_color"> Black
+				  </label>
+				</div> -->
+			</div>
+		</div> <!-- row.// -->
+		<div class="row">
+			<div class="item-option-select">
+				<h6>Select Size</h6>
+				<select class="form-control" name="size" required>
+					<option value="" disabled selected>Select size</option>
+					{% for size in single_product.variation_set.sizes %}
+					<option value="{{ size.variation_value }}">{{ size.variation_value }}</option>
+					{% endfor %}
+				</select>
+				<!-- <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
+				  <label class="btn btn-light">
+				    <input type="radio" name="radio_color"> S
+				  </label>
+				  <label class="btn btn-light active">
+				    <input type="radio" name="radio_color" checked> M
+				  </label>
+				  <label class="btn btn-light">
+				    <input type="radio" name="radio_color"> L
+				  </label>
+				  <label class="btn btn-light">
+				    <input type="radio" name="radio_color"> XL
+				  </label>
+				</div> -->
+			</div>
+		</div> <!-- row.// -->
+		<hr>
+		{% if single_product.stock <= 0 %}
+			<h5 class='text-danger'>Out of Stock</h5>
+		{% else %}
+			{% if in_cart %}
+			<button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
+			<a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View in cart</span> <i class="fas fa-eye"></i>  </a>
+
+			{% else %}
+			<button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
+			{% endif %}
+		{% endif %}
+	</article> <!-- product-info-aside .// -->
+</form>
 		</main> <!-- col.// -->
 	</div> <!-- row.// -->
 </div> <!-- card.// -->
