--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+<!-- Include the PayPal JavaScript SDK -->
+<script src="https://www.paypal.com/sdk/js?client-id=Ae1V3jcOYF5mBdxfoB-HseugAJqwdPj6mlmlUwqN_-1K3Ld9ikvKZjs4sKd3ZkB2CA4YF3usHqrOAp3j&currency=USD"></script>
+
 <script type="text/javascript">
 /// some script
 
